--- a/resources/html/modals.html
+++ b/resources/html/modals.html
@@ -279,16 +279,20 @@
 
     <h3 class="modal-title">Multi-Agent</h3>
     <div class="single-column-layout">
-        <input type="checkbox" id="use-all-connected-ai-nodes">
-        <label for="use-all-connected-ai-nodes"><strong>Message All Connected AI</strong></label>
         <input type="checkbox" id="enable-exit" checked>
         <label for="enable-exit"><strong>/exit</strong></label>
+        <input type="checkbox" id="enable-disconnect" checked>
+        <label for="enable-disconnect"><strong>/disconnect</strong></label>
+        <input type="checkbox" id="enable-rewrite" checked>
+        <label for="enable-rewrite"><strong>/rewrite</strong></label>
         <input type="checkbox" id="enable-all" checked>
         <label for="enable-all"><strong>@all</strong></label>
-        <input type="checkbox" id="enable-self" checked>
-        <label for="enable-self"><strong>@self</strong></label>
+        <input type="checkbox" id="enable-memory" checked>
+        <label for="enable-memory"><strong>@memory</strong></label>
         <input type="checkbox" id="enable-user" checked>
         <label for="enable-user"><strong>@user</strong></label>
+        <input type="checkbox" id="use-all-connected-ai-nodes">
+        <label for="use-all-connected-ai-nodes"><strong>Message All</strong></label>
     </div>
 </div>
 
