+ Title descriptions for color tab

--- a/resources/html/tabs/fractaltab.html
+++ b/resources/html/tabs/fractaltab.html
@@ -114,32 +114,32 @@
                         <input type="range" min="0" max="255" id="rSlider" value="0" style="display: none;">
                         <div class="gridLayout">
 
-                            <div class="settingsSlider">
+                            <div class="settingsSlider" title="Adjusts fractal line brightness">
                                 <label for="cSlider">Brightness<span id="c_value"></span></label>
                                 <input type="range" min="0" max="255" id="cSlider" value="128">
                             </div>
 
-                            <div class="settingsSlider">
+                            <div class="settingsSlider" title="Adjusts fractal line vibrance">
                                 <label for="sSlider">Saturation<span id="s_value"></span></label>
                                 <input type="range" min="0" max="255" id="sSlider" value="127">
                             </div>
 
-                            <div class="settingsSlider">
+                            <div class="settingsSlider" title="Adjusts opacity of fractal lines">
                                 <label for="outer_opacity">Outer Opacity<span id="outer_opacity_value"></span></label>
                                 <input id="outer_opacity" type="range" min="0" max="100" value="100">
                             </div>
 
-                            <div class="settingsSlider">
+                            <div class="settingsSlider" title="Adjusts opacity of fractal line's interior">
                                 <label for="inner_opacity">Inner Opacity<span id="inner_opacity_value"></span></label>
                                 <input id="inner_opacity" type="range" min="0" max="100" value="100">
                             </div>
 
-                            <div class="settingsSlider" id="inversion-settings">
+                            <div class="settingsSlider" id="inversion-settings" title="Inverts color scheme of whole page">
                                 <!-- Slider for Inversion -->
                                 <label for="inversion-slider">Inversion</label>
                                 <input type="range" id="inversion-slider" min="0" max="100" value="0">
                             </div>
-                            <div class="settingsSlider" id="hue-rotation-settings">
+                            <div class="settingsSlider" id="hue-rotation-settings" title="Rotates color scheme of the whole page around the color wheel">
                                 <!-- Slider for Hue Rotation -->
                                 <label for="hue-rotation-slider">Hue Rotation</label>
                                 <input type="range" id="hue-rotation-slider" min="0" max="360" value="0">
