--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/addon/hint/show-hint.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/addon/hint/anyword-hint.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/addon/display/placeholder.min.js"></script>
 
     <!-- Modes -->
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/mode/meta.js"></script>
