--- a/resources/html/tabs/notestab.html
+++ b/resources/html/tabs/notestab.html
@@ -5,18 +5,18 @@
         <div for="zetPaneContent" class="button-label">
 
             <div id="zetPaneHeader" class="zet-pane-header">
-                <button id="notesSearchButton" class="linkbuttons search-button" title="Search Vector Embeddings Database">
+                <button id="notesSearchButton" class="linkbuttons search-button" title="Search Neurite">
                     <svg class="icon">
                         <use xlink:href="#searchSVG"></use>
                     </svg>
                 </button>
-                <select id="zetPaneDropdown" class="custom-select ignoreSetup"></select>
-                <button class="zet-add-pane-button linkbuttons search-button" title="Add a new Zettelkasten Panel">
+                <div title = "Select Archive"><select id="zetPaneDropdown" class="custom-select ignoreSetup"></select></div>
+                <button class="zet-add-pane-button linkbuttons search-button" title="New Archive">
                     <svg class="icon">
                         <use xlink:href="#plus-icon"></use>
                     </svg>
                 </button>
-                <button class="zet-delete-pane-button linkbuttons search-button" title="Delete Zettelkasten Panel">
+                <button class="zet-delete-pane-button linkbuttons search-button" title="Delete Archive">
                     <svg class="icon">
                         <use xlink:href="#delete-icon"></use>
                     </svg>
@@ -47,14 +47,14 @@
             </div>
 
             <!-- Run button (Play icon) -->
-            <button type="submit">
+            <button type="submit" title="Submit prompt">
                 <svg width="18" height="18">
                     <use xlink:href="#play-icon"></use>
                 </svg>
             </button>
 
             <!-- Regenerate button (Refresh icon) -->
-            <button id="regen-button" type="button">
+            <button id="regen-button" type="button" title="Refresh/Halt response">
                 <svg width="18" height="18">
                     <use xlink:href="#refresh-icon"></use>
                 </svg>
