--- a/resources/html/tabs/aitab.html
+++ b/resources/html/tabs/aitab.html
@@ -123,7 +123,7 @@
                             <use xlink:href="#searchSVG"></use>
                         </svg>
                     </button>
-                    <button id="openVectorDbButton" title="Upload files to AI database" class="linkbuttons search-button">Vector-DB</button>
+                    <button id="openVectorDbButton" title="Upload files for AI to interact with" class="linkbuttons search-button">Vector-DB</button>
                     <div class="dropdown-container">
                         <select id="embeddingsModelSelect" class="model-selector custom-select">
                             <option value="local-embeddings-gte-small">gte-small (in-browser)</option>
