--- a/resources/html/tabs/aitab.html
+++ b/resources/html/tabs/aitab.html
@@ -35,6 +35,7 @@
                         <label for="anthropic-select">Claude</label>
                         <div class="dropdown-container">
                             <select id="anthropic-select" class="model-selector custom-select">
+                                <option value="claude-3-7-sonnet-20250219">3.7 Sonnet</option>
                                 <option value="claude-3-5-sonnet-20240620">3.5 Sonnet</option>
                                 <option value="claude-3-opus-20240229">3 Opus</option>
                                 <option value="claude-3-sonnet-20240229">3 Sonnet</option>
@@ -46,16 +47,14 @@
                         <label for="groq-select">Groq</label>
                         <div class="dropdown-container">
                             <select id="groq-select" class="model-selector custom-select">
-                                <option value="gemma2-9b-it">Gemma2-9b-it</option>
-                                <option value="gemma-7b-it">Gemma-7b-it</option>
+                                <option value="gemma2-9b-it">Gemma 2 9b</option>
                                 <option value="mixtral-8x7b-32768">Mixtral 8x7b 32k</option>
+                                <option value="mistral-saba-24b">Mistral Saba 24b</option>
                                 <option value="deepseek-r1-distill-llama-70b">Deepseek R1</option>
-                                <option value="llama-3.2-3b-preview">Llama 3.2 3b</option>
-                                <option value="llama-3.2-1b-preview">Llama 3.2 1b</option>
-                                <option value="llama-3.1-70b-versatile">Llama 3.1 70b</option>
+                                <option value="llama-3.3-70b-versatile">Llama 3.3 70b</option>
                                 <option value="llama-3.1-8b-instant">Llama 3.1 8b</option>
-                                <option value="llama3-70b-8192">Llama3-70b</option>
-                                <option value="llama3-8b-8192">Llama3-8b</option>
+                                <option value="llama3-70b-8192">Llama 3 70b</option>
+                                <option value="llama3-8b-8192">Llama 3 8b</option>
                             </select>
                         </div>
                     </div>
