+user updated ollama base url
Allow user to update the ollama base url. Works from the client as well as the proxy.

--- a/resources/html/modals.html
+++ b/resources/html/modals.html
@@ -325,6 +325,7 @@
 </div>
 
 <div id="ollamaManagerModal" style="display: none;">
+    <input type="text" id="ollamaBaseUrl" value="http://127.0.0.1:11434/api/">
     <div id="ollamaModelList" class="custom-scrollbar"></div>
 </div>
 
