Fixes in CodeView Support multiple active custom consoles in parallel. Introduce localforage

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!--CDN imports-->
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.9.179/build/pdf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/localforage@1.10.0/dist/localforage.min.js"></script>
 
     <!-- Codemirror 5 Core -->
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.js"></script>
