--- a/resources/html/tabs/fractaltab.html
+++ b/resources/html/tabs/fractaltab.html
@@ -29,7 +29,7 @@
                 <div class="settingsSlider centered" title="Adjust smoothness of fractal lines. Lower to reduce lag" style="margin-bottom: 10px;">
                     <div style="display:flex; justify-content: space-between;">
                         <div class="number-input-wrapper">
-                            <div id="quality_value">Quality</div>
+                            <div id="quality_value">Quality:</div>
                             <input id="quality_value_number" class="number-input" type="number" min="0" max="100" value="16" step="0.1">
                         </div>
                         <div id="fps">?? fps (Is javascript enabled?)</div>
@@ -41,7 +41,7 @@
                     <div class="settingsSlider" title="Adjusts length of fractal lines. Lower to reduce lag">
                         <div class="number-input-wrapper">
                             <label for="length">Length:</label>
-                            <input id="length_value" class="number-input" type="number" min="0" max="100" step="1">
+                            <input id="length_value" class="number-input" type="number" min="0" max="100" value="50" step="1">
                         </div>
                         <input id="length" type="range" min="0" max="100" value="50">
                     </div>
@@ -49,9 +49,9 @@
                     <div class="settingsSlider" title="Adjusts width of fractal lines">
                         <div class="number-input-wrapper">
                             <label for="renderWidthMultSlider">Width:</label>
-                            <input id="renderWidthMultValue" class="number-input" type="number" min="0" max="24" step="1">
+                            <input id="renderWidthMultValue" class="number-input" type="number" min="0" max="24" step="0.01">
                         </div>
-                        <input type="range" id="renderWidthMultSlider" min="0" max="12" step="0.001">
+                        <input type="range" id="renderWidthMultSlider" min="0" max="12" step="0.01">
                     </div>
 
                     <div class="settingsSlider" title="Adjusts amount of fractal lines. Lower to reduce lag">
@@ -65,9 +65,9 @@
                     <div class="settingsSlider" title="Adjusts fractal line generation speed. Lower to reduce lag">
                         <div class="number-input-wrapper">
                             <label for="regenDebtSlider">Speed:</label>
-                            <input id="regenDebtValue" class="number-input" type="number" min="0" max="4" step="0.1">
+                            <input id="regenDebtValue" class="number-input" type="number" min="0" max="4" step="0.01">
                         </div>
-                        <input type="range" id="regenDebtSlider" min="0" max="4" step="0.001">
+                        <input type="range" id="regenDebtSlider" min="0" max="4" step="0.01">
                     </div>
                     <div class="settingsSlider" title="Adjusts cursor's control of line generation">
                         <div class="number-input-wrapper">
@@ -136,7 +136,7 @@
                             <div class="settingsSlider" title="Adjusts fractal line brightness">
                                 <div class="number-input-wrapper" style="flex-direction: column;">
                                     <label for="cSlider">Brightness:</label>
-                                    <input id="c_value" class="number-input" type="number" min="0" max="255" step="1">
+                                    <input id="c_value" class="number-input" type="number" min="0" max="255" value="128" step="1">
                                 </div>
                                 <input type="range" min="0" max="255" id="cSlider" value="128">
                             </div>
@@ -144,7 +144,7 @@
                             <div class="settingsSlider" title="Adjusts fractal line vibrance">
                                 <div class="number-input-wrapper" style="flex-direction: column;">
                                     <label for="sSlider">Saturation:</label>
-                                    <input id="s_value" class="number-input" type="number" min="0" max="255" step="1">
+                                    <input id="s_value" class="number-input" type="number" min="0" max="255" value="127" step="1">
                                 </div>
                                 <input type="range" min="0" max="255" id="sSlider" value="127">
                             </div>
@@ -152,7 +152,7 @@
                             <div class="settingsSlider" title="Adjusts opacity of fractal lines">
                                 <div class="number-input-wrapper" style="flex-direction: column;">
                                     <label for="outer_opacity">Outer Opacity:</label>
-                                    <input id="outer_opacity_value" class="number-input" type="number" min="0" max="100" step="1">
+                                    <input id="outer_opacity_value" class="number-input" type="number" min="0" max="100" value="100" step="1">
                                 </div>
                                 <input id="outer_opacity" type="range" min="0" max="100" value="100">
                             </div>
@@ -160,7 +160,7 @@
                             <div class="settingsSlider" title="Adjusts opacity of fractal line's interior">
                                 <div class="number-input-wrapper" style="flex-direction: column;">
                                     <label for="inner_opacity">Inner Opacity:</label>
-                                    <input id="inner_opacity_value" class="number-input" type="number" min="0" max="100" step="1">
+                                    <input id="inner_opacity_value" class="number-input" type="number" min="0" max="100" value="100" step="1">
                                 </div>
                                 <input id="inner_opacity" type="range" min="0" max="100" value="100">
                             </div>
