- Support persisting images across browser sessions - Enhance the list of Saves with relevant meta-info tooltips - Refactor savenet.js

--- a/resources/html/tabs/dropdown.html
+++ b/resources/html/tabs/dropdown.html
@@ -14,7 +14,7 @@
                 <button class="tablink" title="Take notes and interact with AI" onclick="openTab('tab1', this)">Notes</button>
                 <button class="tablink" title="Change AI model and settings" onclick="openTab('tab4', this)">Ai</button>
                 <button class="tablink" title="Adjust fractal rendering" onclick="openTab('tab2', this)">Fractal</button>
-                <button class="tablink" title="Teleport to interesting locations" onclick="openTab('tab6', this)">Networks</button>
+                <button class="tablink" title="Teleport to interesting locations" onclick="openTab('tab6', this)">Saves</button>
                 <button class="tablink" title="help" onclick="openTab('tab3', this)">?</button>
             </div>
 
